@@ -1,11 +1,4 @@
-<html>
-    <head>
-	<title><?= $this->title ?></title>
-    </head>
-    <body onload="window.print();">
-	<h2><?= $this->title ?></h2>
-	<div>
-	    <?= $this->content ?>
-	</div>
-    </body>
-</html>
+<h2><?= $this->title ?></h2>
+<div>
+    <?= $this->content ?>
+</div>
