@@ -1,14 +1,7 @@
-<html>
-    <head>
-	<title><?= $this->translate('Show version of page') ?></title>
-    </head>
-    <body>
-	<h2><?= $this->translate('Show version of page') ?></h2>
+<h2><?= $this->translate('Show version of page') ?></h2>
 
-	<b>Name: </b><?= $this->name ?><br>
-	<b>Subtitle: </b><?= $this->subtitle ?><br>
-	<b>Alias: </b><?= $this->alias ?><br>
-	<b>Tooltip: </b><?= $this->tooltip ?><br>
-	<b>Description: </b><?= $this->description ?><br>
-    </body>
-</html>
+<b>Name: </b><?= $this->name ?><br>
+<b>Subtitle: </b><?= $this->subtitle ?><br>
+<b>Alias: </b><?= $this->alias ?><br>
+<b>Tooltip: </b><?= $this->tooltip ?><br>
+<b>Description: </b><?= $this->description ?><br>
